@@ -1,8 +1,14 @@
-2024-04-08  Charlie Zender  <zender@uci.edu>
+2024-04-09  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.2.4-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.2.4-alpha02: Goat Cheese Hamburguesa';git push
 	git tag -a 5.2.4-alpha02 -m 'all: NCO client nco_qnt_mtd(); ncclimo: tm_bnds err dgn';git push --tags
+
+	* all: convert all NSD/NSB regression tests to use new CF convention
+
+	* all: write old (libnetcdf-emulating) attributes only for DSD (rounding) method, not for NSD/NSB (quantization) methods
+
+2024-04-08  Charlie Zender  <zender@uci.edu>
 
 	* all: verify CF quantization metadata works for libnco
 
